Settings per live reload e dotnet watch run

--- a/src/MyCourse/Views/Home/Index.cshtml
+++ b/src/MyCourse/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 @* @{
     Layout = "_Layout";
 } *@
-<h1>Sono la view per l'action Index dell'HomeController</h1>
+<h1>Benvenuto su MyCourse</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, nihil voluptatem vitae ducimus iste accusamus dolorem laudantium exercitationem nostrum expedita, quos dicta qui. Nam quidem suscipit voluptatem, rem excepturi optio?</p>
 <p>Doloremque praesentium non sunt beatae dolore pariatur culpa nesciunt, incidunt ipsa in maxime dolores veniam earum aliquam eos est minima, officia quo corporis eius. Earum quaerat ducimus quia non totam!</p>
 <p>Facere vel consequatur fugit! Cupiditate quasi cumque ratione sapiente assumenda, omnis harum totam nam? Sed nihil praesentium exercitationem? Cumque eveniet deleniti nobis nemo saepe vitae voluptate quae sequi harum est.</p>
