--- a/src/MyCourse/Views/Shared/_Layout.cshtml
+++ b/src/MyCourse/Views/Shared/_Layout.cshtml
@@ -5,27 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.min.css" integrity="sha512-f2MWjotY+JCWDlE0+QAshlykvZUtIm35A6RHwfYZPdxKgLJpL8B+VVxjpHJwZDsZaWdyHVhlIHoblFYGkmrbhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </environment>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
+    </environment>
     <title>Elenco dei corsi</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>Pagina 1</li>
-                <li>Pagina 2</li>
-                <li>Pagina 3</li>
-                <li>Pagina 4</li>
-                <li>Pagina 5</li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand"><img src="~/logo.svg" alt="MyCourse" height="30"></a>
+            <button class="navbar-toggler" data-target="#navbar" data-toggle="collapse" aria-controls="navbar" aria-expanded="false" aria-label="MyCourse navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" asp-action="Index" asp-controller="Home">Home</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" asp-action="Index" asp-controller="Courses">Catalogo corsi</span></a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-    
-    @RenderBody()
-    
+
+    <div class="container">
+        @* <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i> *@
+        @RenderBody()
+    </div>
+
     <footer>
         <p>Contattaci al numero...</p>
-    </footer>  
+    </footer>
+
+    <environment exclude="Development">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    </environment>
+    <environment include="Development">
+        <script src="~/lib/jquery/dist/jquery.slim.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    </environment>
 </body>
 
 </html>
