--- a/src/MyCourse/Views/Courses/Index.cshtml
+++ b/src/MyCourse/Views/Courses/Index.cshtml
@@ -2,7 +2,7 @@
 
 @for (int i = 0; i < 10; i++)
 {
-    <div class="row">
+    <div class="row course">
         <div class="col-md-1">
             <img src="~/logo.svg" width="50">
         </div>
@@ -10,17 +10,17 @@
             <h2>Titolo del corso</h2>
             <author>di Nome autore</author>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 rating">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 price">
             EUR 10,99<br><s>EUR 12,99</s>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 d-flex align-items-center">
             <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="5">Dettaglio corso 5</a>
         </div>
     </div>
