--- a/src/MyCourse/Views/Courses/Index.cshtml
+++ b/src/MyCourse/Views/Courses/Index.cshtml
@@ -1,19 +1,33 @@
 @model List<CourseViewModel>
-<h1>Catalogo dei corsi</h1>
+<div class="row">
+    <div class="col-md-8">
+        <h1>@ViewData["Title"]</h1>
+    </div>
+    <div class="col-md-4 d-flex align-items-center">
+        <form asp-controller="Courses" asp-action="Index" method="get">
+            <div class="input-group">
+                <input type="text" name="search" class="form-control" placeholder="Cerca..." aria-label="Cerca..." aria-describedby="search-button">
+                <div class="input-group-append">
+                    <button class="input-group-text" id="search-button"><i class="fas fas fa-search"></i></button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
 @foreach (CourseViewModel course in Model)
 {
     <hr>
     <div class="row course">
-        <div class="col-md-1">
-            <img src="@course.ImagePath" width="50">
-        </div>
-        <div class="col-md-5">
-            <h2>@course.Title</h2>
-            <author>di @course.Author</author>
-        </div>
-        <div class="col-md-2 rating" title="@course.Rating">
-            @for (int i = 1; i <= 5; i++)
+    <div class="col-md-1">
+        <img src="@course.ImagePath" width="50">
+    </div>
+    <div class="col-md-5">
+        <h2>@course.Title</h2>
+        <author>di @course.Author</author>
+    </div>
+    <div class="col-md-2 rating" title="@course.Rating">
+        @for (int i = 1; i <= 5; i++)
             {
                 if (course.Rating >= i)
                 {
@@ -32,8 +46,9 @@
         <div class="col-md-2 price">
             @course.CurrentPrice
             @if (!course.CurrentPrice.Equals(course.FullPrice))
-            {            
-                <br><s>@course.FullPrice</s>
+            {
+                <br>
+                <s>@course.FullPrice</s>
             }
         </div>
         <div class="col-md-2 d-flex align-items-center">
