--- a/src/MyCourse/wwwroot/style.css
+++ b/src/MyCourse/wwwroot/style.css
@@ -74,5 +74,18 @@ h2 {
 
 .course-lessons .course-duration {
     font-weight: bold;
+}
 
+section+section {
+    margin-top: 2em;
+}
+
+.jumbotron {
+    background-image: url('/images/hero.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.jumbotron h1 {
+    font-size: 3.5rem;
 }
