Aggiunti Tag Helper

--- a/src/MyCourse/Views/Home/Index.cshtml
+++ b/src/MyCourse/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
     <h1 class="display-4">@ViewData["Title"]</h1>
     <p class="lead">Impara in maniera facile e divertente con i nostri corsi online!<br>
         Scegli da un vasto catalogo sempre a tua disposizione.</p>
-    <hr class="my-4">
     <p><a asp-controller="Courses" asp-action="Index" class="btn btn-primary">Sfoglia il catalogo dei corsi <i class="fas fa-angle-right"></i></a></p>
 </div>
 
@@ -21,30 +20,10 @@
                 <author>di @course.Author</author>
             </div>
             <div class="col-md-2 rating" title="@course.Rating">
-                @for (int i = 1; i <= 5; i++)
-                {
-                    if (course.Rating >= i)
-                    {
-                        <i class="fas fa-star"></i>
-                    }
-                    else if (course.Rating > i - 1)
-                    {
-                        <i class="fas fa-star-half-alt"></i>
-                    }
-                    else
-                    {
-                        <i class="far fa-star"></i>
-                    }
-                }
+                <rating value="@course.Rating"></rating>
             </div>
             <div class="col-md-2 price">
-                @course.CurrentPrice
-                @if (!course.CurrentPrice.Equals(course.FullPrice))
-                {
-                    <br>
-
-                    <s>@course.FullPrice</s>
-                }
+                <price current-price="@course.CurrentPrice" full-price="@course.FullPrice"></price>
             </div>
             <div class="col-md-2 d-flex align-items-center">
                 <a class="btn btn-outline-primary" asp-controller="Courses" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
@@ -68,30 +47,10 @@
                 <author>di @course.Author</author>
             </div>
             <div class="col-md-2 rating" title="@course.Rating">
-                @for (int i = 1; i <= 5; i++)
-                {
-                    if (course.Rating >= i)
-                    {
-                        <i class="fas fa-star"></i>
-                    }
-                    else if (course.Rating > i - 1)
-                    {
-                        <i class="fas fa-star-half-alt"></i>
-                    }
-                    else
-                    {
-                        <i class="far fa-star"></i>
-                    }
-                }
+                <rating value="@course.Rating"></rating>
             </div>
             <div class="col-md-2 price">
-                @course.CurrentPrice
-                @if (!course.CurrentPrice.Equals(course.FullPrice))
-                {
-                    <br>
-
-                    <s>@course.FullPrice</s>
-                }
+                <price current-price="@course.CurrentPrice" full-price="@course.FullPrice"></price>
             </div>
             <div class="col-md-2 d-flex align-items-center">
                 <a class="btn btn-outline-primary" asp-controller="Courses" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
